- Adapt the code for 7.x - Remove erroneous licence